--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase": "^9.23.0",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
